<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life Counter</string>

    <!-- MainActivity texts -->
    <eat-comment />

    <string name="main_title">COUNT</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_decrement">-5</string>
    <string name="main_increment">+5</string>
    <string name="main_reset_dialog_title">Confirmation</string>
    <string name="main_reset_dialog_message">Do you want to reset the life totals ?</string>

    <!-- SettingsActivity texts -->
    <eat-comment />

    <string name="settings_title">Settings</string>
    <string name="settings_header_background">BACKGROUND</string>
    <string name="settings_item_background_color">Set background</string>
    <string name="settings_header_points">POINTS</string>
    <string name="settings_item_flip_counter">Flip counter</string>
    <string name="settings_item_poison_counters">Show poison counters</string>
    <string name="settings_item_starting_life_format">Starting life: %1$d</string>
    <string name="settings_header_other">OTHER</string>
    <string name="settings_item_keep_screen_awake">Keep screen awake</string>
    <string name="settings_header_about">ABOUT</string>
    <string name="settings_item_credits">Credits</string>

    <!-- NumberPicker dialog -->
    <eat-comment />

    <string name="number_picker_dialog_title">Starting Life</string>
    <string name="number_picker_dialog_button_set">Set</string>

    <!-- Credits dialog -->
    <eat-comment />

    <string name="credits_dialog_title">Credits</string>
    <string name="credits_dialog_development_header">Development</string>
    <string name="credits_dialog_development_item">Nicolas Klein (foxykeep.com)</string>
    <string name="credits_dialog_design_header">Design</string>
    <string name="credits_dialog_design_item">Marie Schweiz (marie-schweiz.de)</string>
    <string name="credits_dialog_button_close">Close</string>

    <!-- BackgroundActivity texts -->
    <eat-comment />

    <string name="background_title">Set background</string>

</resources>
