<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Background settings -->
        <com.foxykeep.lifecounter.widget.SettingsHeaderTextView
            style="@style/SettingsHeader"
            android:text="@string/settings_header_background" />

        <com.foxykeep.lifecounter.widget.SettingsItemTextView
            android:id="@+id/item_background_color"
            style="@style/SettingsItem"
            android:text="@string/settings_item_background_color" />

        <!-- Points settings -->
        <com.foxykeep.lifecounter.widget.SettingsHeaderTextView
            style="@style/SettingsHeader"
            android:text="@string/settings_header_points" />

        <com.foxykeep.lifecounter.widget.SettingsItemLinearLayout
            android:id="@+id/item_flip_counter"
            style="@style/SettingsLinearLayout">

            <TextView
                style="@style/SettingsLinearLayoutTextView"
                android:text="@string/settings_item_flip_counter" />

            <Switch
                android:id="@+id/item_flip_counter_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="false" />

        </com.foxykeep.lifecounter.widget.SettingsItemLinearLayout>

        <com.foxykeep.lifecounter.widget.SettingsItemLinearLayout
            android:id="@+id/item_poison_counters"
            style="@style/SettingsLinearLayout">

            <TextView
                style="@style/SettingsLinearLayoutTextView"
                android:text="@string/settings_item_poison_counters" />

            <Switch
                android:id="@+id/item_poison_counters_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="false" />

        </com.foxykeep.lifecounter.widget.SettingsItemLinearLayout>

        <com.foxykeep.lifecounter.widget.SettingsItemTextView
            android:id="@+id/item_starting_life"
            style="@style/SettingsItem"
            android:text="@string/settings_item_starting_life" />


    </LinearLayout>

</ScrollView>
